--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.7",
     "axios": "^0.19.0",
+    "beautify-scrollbar": "^1.0.8",
     "bootstrap": "^4.6.0",
     "core-js": "^2.6.5",
+    "emailjs-com": "^2.6.4",
     "jquery": "^3.5.1",
     "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "socket.io-client": "^3.1.0",
+    "v2-table": "^3.0.3",
     "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
