--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "start": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "start": "serve"
+    "lint": "vue-cli-service lint"
+   
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
